Fix #879 - fix aside collapse menu.

--- a/oscm-portal/WebContent/customBootstrap/scss/darkCustom.scss
+++ b/oscm-portal/WebContent/customBootstrap/scss/darkCustom.scss
@@ -4,6 +4,28 @@
 
 /* -------begin customization-------- *//* change the fonts, and primary theme color to green  */
 @import "myvariables";
+
+.bootstrap_footer {
+	background: $dark;
+	border-bottom:1px solid #4c4c4c;
+	width: 100%;
+	color: $white;
+}
+
+.bootstrap_footer a{ color: $white; }
+
+.bootstrap_footer ul { 
+	font-size: 93%; 
+	list-style: none; 
+	padding: 0; 
+	margin: 0;
+}
+
+.bootstrap_footer li {
+	display: inline;
+	margin: 0; 
+	margin-left: 16px;
+}	
 	
 
 /* -------end customization-------- *//* finally, import Bootstrap to set the changes! */
